--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "form-data": "^3.0.0"
+    "form-data": "^3.0.0",
+    "yup": "^0.28.3"
   }
 }
