--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "Jannik Hauptvogel <hauptvogel@amicaldo.de>",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "form-data": "^3.0.0",
+    "axios": "^0.21.1",
+    "form-data": "^4.0.0",
+    "yum": "^0.1.1",
     "yup": "^0.28.5"
   },
   "repository": {
